--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -20,12 +20,25 @@
                 android:textAlignment="center"
                 android:textSize="26sp" />
 
-            <ImageView
-                android:id="@+id/movie_thumbnail"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="14dp" />
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/movie_thumbnail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="14dp" />
+
+                <CheckBox
+                    android:id="@+id/add_favorite"
+                    style="?android:attr/starStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/add_favorite" />
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/movie_overview"
