--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -36,8 +36,7 @@
                     android:id="@+id/add_favorite"
                     style="?android:attr/starStyle"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/add_favorite" />
+                    android:layout_height="wrap_content" />
             </LinearLayout>
 
             <TextView
